samples/_failures_safe/1761166884_cb91ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9d8db7e.c: In function ‘main’:
./samples/SAFE/__tmp_e9d8db7e.c:136:5: error: expected declaration or statement at end of input
  136 |     if (find_shortest_path(&g, 0, 5, path, &path_len)) {
      |     ^~
./samples/SAFE/__tmp_e9d8db7e.c:136:5: error: expected declaration or statement at end of input
